--- a/index.html
+++ b/index.html
@@ -109,10 +109,15 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
-    <section id="disfrutaDelViaje" class="container col-md-12">
+      <section id="disfrutaDelViaje" class="container col-md-12">
       <div class="row">
-        <div class="col-md-5 pull-right recuadroInformacion colorFondo textoBlanco">
+        <!--movile-->
+          <div class="col-md-5 pull-right recuadroInformacion colorFondo textoBlanco hidden-lg"> 
+              <h2>Comienza a viajar con <img src="assets/images/logoBlanco.png" alt="logo"></h2>
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#"> Descarga el app</button>
+            </div>
+    <!--Desktop-->
+            <div class="col-md-5 pull-right recuadroInformacion colorFondo textoBlanco visible-lg">
           <h2>Disfruta Del Viaje</h2>
           <h2>Eres dueño de tu tiempo</h2>
           <p>Viaja con<img src="assets/images/logoBlanco.png" width="80px"></p>
