--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/icons/icomoon/style.css">
     <title>Lab<car</title>
     <link href="vendors/bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
@@ -75,7 +76,6 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="inicioModalLabel">Modal title</h5>
           <div class="row">
               <div class="col-lg-6">
                 <div class="input-group">
@@ -132,15 +132,11 @@
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
  Conviértete en conductor
 </button>
-
-
 <!-- Modal -->
 <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header"
+    <div class="modal-content fondo">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -213,7 +209,7 @@
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
+      <div class="modal-content fondo">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -287,7 +283,6 @@
 
             </div>
           </div>
-
           <button class="btn btn-lg btn-primary btn-block submit-btn" type="submit">Enviar</button>
         </form>
       </div>
@@ -351,15 +346,15 @@
       </div>
       <div class="row col-md-10 col-md-offset-1 page-header text-left">
         <nav>
-        <div class="col-md-2">
-            <div class="redesSociales"><i class="facebook"></i></div> 
-            <div class="redesSociales"><i class="twitter"></i></div> 
-            <div class="redesSociales"><i class="linkedin2"></i></div> 
-            <div class="redesSociales"><i class="appleinc"></i></div> 
-            <div class="redesSociales"><i class="play3"></i></div>
+        <div class="col-md-2 icono">
+            <i class="fa fa-facebook redesSociales" aria-hidden="true"></i>
+            <i class="fa fa-twitter redesSociales" aria-hidden="true"></i>
+            <i class="fa fa-linkedin redesSociales" aria-hidden="true"></i>
+            <i class="fa fa-apple redesSociales" aria-hidden="true"></i> 
+            <i class="fa fa-play redesSociales" aria-hidden="true"></i>
         </div>
         </nav>   
-        <div class="col-md-3">
+        <div class="col-xs-3">
           <ul class="nav textoBlanco">
             <li>Viaja</li>
             <li>Conduce</li>
@@ -371,7 +366,7 @@
             <li>Seguridad</li>
           </ul>
         </div>
-        <div class="col-md-3">
+        <div class="col-xs-3">
           <ul class="nav textoBlanco">
             <li>Oportunidades</li>
             <li>Nuestra historia</li>
