mejorando lab<car

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/icons/icomoon/style.css">
     <title>Lab<car</title>
     <link href="vendors/bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
@@ -140,7 +141,6 @@
     <div class="modal-content">
       <div class="modal-header"
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -292,15 +292,15 @@
         </form>
       </div>
     </section>
- </div>
+  </div>
     <div class="modal-footer">
         </div>
       </div>
     </div>
   </div>
   </div>
-      </div>
-    </section>
+</div>
+</section>
 
     <section id="descargaLaApp" class="container col-md-12 colorFondo">
       <div class="row">
@@ -338,7 +338,7 @@
           <button type="button" name="button" class="botonCuadrado">¡TRAZAR RUTA!</button>
         </div>
         <div class="col-md-6">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.8787591211503!2d-99.16700398553328!3d19.417643746191327!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff41d4c73813%3A0xd1c6f4fcad149f54!2sLaboratoria+Coding+A.C.!5e0!3m2!1ses-419!2smx!4v1495471991200" frameborder="2" allowfullscreen></iframe>
+          <iframe class="img-responsive" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.8787591211503!2d-99.16700398553328!3d19.417643746191327!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff41d4c73813%3A0xd1c6f4fcad149f54!2sLaboratoria+Coding+A.C.!5e0!3m2!1ses-419!2smx!4v1495471991200" frameborder="2" allowfullscreen></iframe>
         </div>
       </div>
     </section>
@@ -352,11 +352,11 @@
       <div class="row col-md-10 col-md-offset-1 page-header text-left">
         <nav>
         <div class="col-md-2">
-            <div class="redesSociales"><i class="facebook"></i></div> 
-            <div class="redesSociales"><i class="twitter"></i></div> 
-            <div class="redesSociales"><i class="linkedin2"></i></div> 
-            <div class="redesSociales"><i class="appleinc"></i></div> 
-            <div class="redesSociales"><i class="play3"></i></div>
+          <i class="fa fa-facebook redesSociales" aria-hidden="true"></i> 
+          <i class="fa fa-twitter redesSociales" aria-hidden="true"></i> 
+          <i class="fa fa-linkedin redesSociales"aria-hidden="true"></i>
+          <i class="fa fa-apple redesSociales" aria-hidden="true"></i>
+          <i class="fa fa-play redesSociales" aria-hidden="true"></i>
         </div>
         </nav>   
         <div class="col-md-3">
