--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
+          <h5 class="modal-title" id="inicioModalLabel">Modal title</h5>
           <div class="row">
               <div class="col-lg-6">
                 <div class="input-group">
@@ -132,10 +133,13 @@
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
  Conviértete en conductor
 </button>
+
+
 <!-- Modal -->
 <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
-    <div class="modal-content fondo">
+    <div class="modal-content">
+      <div class="modal-header"
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
@@ -209,7 +213,7 @@
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-      <div class="modal-content fondo">
+      <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -283,19 +287,20 @@
 
             </div>
           </div>
+
           <button class="btn btn-lg btn-primary btn-block submit-btn" type="submit">Enviar</button>
         </form>
       </div>
     </section>
- </div>
+  </div>
     <div class="modal-footer">
         </div>
       </div>
     </div>
   </div>
   </div>
-      </div>
-    </section>
+</div>
+</section>
 
     <section id="descargaLaApp" class="container col-md-12 colorFondo">
       <div class="row">
@@ -333,7 +338,7 @@
           <button type="button" name="button" class="botonCuadrado">¡TRAZAR RUTA!</button>
         </div>
         <div class="col-md-6">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.8787591211503!2d-99.16700398553328!3d19.417643746191327!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff41d4c73813%3A0xd1c6f4fcad149f54!2sLaboratoria+Coding+A.C.!5e0!3m2!1ses-419!2smx!4v1495471991200" frameborder="2" allowfullscreen></iframe>
+          <iframe class="img-responsive" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.8787591211503!2d-99.16700398553328!3d19.417643746191327!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff41d4c73813%3A0xd1c6f4fcad149f54!2sLaboratoria+Coding+A.C.!5e0!3m2!1ses-419!2smx!4v1495471991200" frameborder="2" allowfullscreen></iframe>
         </div>
       </div>
     </section>
@@ -346,15 +351,15 @@
       </div>
       <div class="row col-md-10 col-md-offset-1 page-header text-left">
         <nav>
-        <div class="col-md-2 icono">
-            <i class="fa fa-facebook redesSociales" aria-hidden="true"></i>
-            <i class="fa fa-twitter redesSociales" aria-hidden="true"></i>
-            <i class="fa fa-linkedin redesSociales" aria-hidden="true"></i>
-            <i class="fa fa-apple redesSociales" aria-hidden="true"></i> 
-            <i class="fa fa-play redesSociales" aria-hidden="true"></i>
+        <div class="col-md-2">
+          <i class="fa fa-facebook redesSociales" aria-hidden="true"></i> 
+          <i class="fa fa-twitter redesSociales" aria-hidden="true"></i> 
+          <i class="fa fa-linkedin redesSociales"aria-hidden="true"></i>
+          <i class="fa fa-apple redesSociales" aria-hidden="true"></i>
+          <i class="fa fa-play redesSociales" aria-hidden="true"></i>
         </div>
         </nav>   
-        <div class="col-xs-3">
+        <div class="col-md-3">
           <ul class="nav textoBlanco">
             <li>Viaja</li>
             <li>Conduce</li>
@@ -366,7 +371,7 @@
             <li>Seguridad</li>
           </ul>
         </div>
-        <div class="col-xs-3">
+        <div class="col-md-3">
           <ul class="nav textoBlanco">
             <li>Oportunidades</li>
             <li>Nuestra historia</li>
